--- a/centos7-httpd-with-https/Vagrantfile
+++ b/centos7-httpd-with-https/Vagrantfile
@@ -11,7 +11,7 @@ Vagrant.configure("2") do |config|
   # https://docs.vagrantup.com.
 
   # Virtual box logical name
-  config.vm.define "gekal"
+  config.vm.define "gekalvm"
 
   # Every Vagrant development environment requires a box. You can search for
   # boxes at https://vagrantcloud.com/search.
