--- a/centos7-httpd-with-https/Vagrantfile
+++ b/centos7-httpd-with-https/Vagrantfile
@@ -18,7 +18,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "centos/7"
 
   # Define the name of hostname
-  config.vm.hostname = "server"
+  config.vm.hostname = "apachecertstudy"
 
   # Ensable automatic box update checking.
   config.vm.box_check_update = true
@@ -44,12 +44,12 @@ Vagrant.configure("2") do |config|
   # Provider-specific configuration 
   config.vm.provider "virtualbox" do |vb|
     # Virtual box machine name.
-    vb.name = "httpd-server"
+    vb.name = "apachecertstudy"
 
     # Define the group of virturalbox
     vb.customize [
         "modifyvm", :id,
-        "--groups", "/devkit"
+        "--groups", "/study"
     ]
 
     # Display the VirtualBox GUI when booting the machine
@@ -64,19 +64,19 @@ Vagrant.configure("2") do |config|
     # provision path
     provisioning_path = "./provision"
     # The command used to run playbooks.
-    ansible.playbook = "./provision/environment.yml"
+    ansible.playbook = "./provision/apachecertstudy.yml"
     # Set of inventory host variables to be included in the auto-generated inventory file.
     ansible.host_vars = {
       "default" => {
         "ansible_connection" => "local",
-        "hostname" => "dockerstudy"
+        "hostname" => "apachecertstudy"
       }
     }
     # Pass additional variables (with highest priority) to the playbook.
     ansible.extra_vars = {
       ansible_ssh_user: "vagrant",
-      owner_mail: "name@mail.com",
-      domain_name: "www.excale.com"
+      owner_mail: "liu.hongying@mail.com",
+      domain_name: "sample.gekal.loversoft.cn"
     }
   end
 end
