--- a/centos7-minikube/Vagrantfile
+++ b/centos7-minikube/Vagrantfile
@@ -51,7 +51,7 @@ Vagrant.configure("2") do |config|
     config.proxy.enabled  = true
     config.proxy.http     = ENV['http_proxy']
     config.proxy.https    = ENV['http_proxy']
-    config.proxy.no_proxy = "localhost,127.0.0.1,10.0.2.0/24,10.96.0.0/12,10.244.0.0/16,".concat(ENV['no_proxy'])
+    config.proxy.no_proxy = "localhost,127.0.0.1,10.0.2.0/24,10.96.0.0/12,10.244.0.0/16," << (ENV['no_proxy'] || "")
   end
 
   # Run Ansible from the Vagrant VM
