--- a/centos7-minikube/Vagrantfile
+++ b/centos7-minikube/Vagrantfile
@@ -3,6 +3,9 @@
 
 Vagrant.configure("2") do |config|
 
+  # Define the private ip list of vm
+  private_ips = []
+
   # Define the logical name of vm
   config.vm.define "gekalvm"
 
@@ -19,8 +22,10 @@ Vagrant.configure("2") do |config|
   # config.vm.network "forwarded_port", guest: 80, host: 8080, host_ip: "127.0.0.1"
   config.vm.network "forwarded_port", id: "ssh", guest: 22, host: 2222, host_ip: "127.0.0.1"
 
-  # Create a private network, which allows host-only access to the machine
-  # config.vm.network "private_network", ip: "192.168.33.10"
+  private_ips.each{|private_ip|
+    # Create a private network, which allows host-only access to the machine
+    config.vm.network "private_network", ip: private_ip
+  }
 
   # Share an additional folder to the guest VM.
   config.vm.synced_folder ".", "/vagrant", type: "virtualbox", disabled: false
@@ -51,7 +56,7 @@ Vagrant.configure("2") do |config|
     config.proxy.enabled  = true
     config.proxy.http     = ENV['http_proxy']
     config.proxy.https    = ENV['http_proxy']
-    config.proxy.no_proxy = "localhost,127.0.0.1,10.0.2.0/24,10.96.0.0/12,10.244.0.0/16," << (ENV['no_proxy'] || "")
+    config.proxy.no_proxy = "localhost,127.0.0.1,10.0.2.0/24,10.96.0.0/12,10.244.0.0/16,".concat(private_ips.join(","))
   end
 
   # Run Ansible from the Vagrant VM
@@ -71,7 +76,7 @@ Vagrant.configure("2") do |config|
     ansible.extra_vars = {
       ansible_ssh_user: "vagrant",
       http_proxy: ENV['http_proxy'],
-      no_proxy: ENV['no_proxy'],
+      no_proxy: "localhost,127.0.0.1,10.0.2.0/24,10.96.0.0/12,10.244.0.0/16,".concat(private_ips.join(",")),
       docker_proxy_env: [
         "HTTP_PROXY={{ http_proxy }}",
         "HTTPS_PROXY={{ http_proxy }}",
