--- a/centos7-docker-ce/provision/roles/docker/tasks/main.yml
+++ b/centos7-docker-ce/provision/roles/docker/tasks/main.yml
@@ -56,3 +56,18 @@
     dest: "/etc/systemd/system/docker.service.d/http-proxy.conf"
     mode: "u=rw,g=r,o="
   notify: restart docker
+
+- name: Install python-pip.
+  yum:
+    name: "python-pip"
+    state: "present"
+
+- name: upgrade all python packages
+  yum:
+    name: 'python*'
+    state: latest
+
+- name: Install docker-compose.
+  pip:
+    name: "docker-compose"
+    state: "present"
